# kornia-rs

./: Cargo.toml
crates/kornia-tensor-ops/src/: ops.rs
smolvlm/: Cargo.toml  gsoc.md
smolvlm/src/: main.rs
smolvlm/src/candle/: mod.rs  modeling.rs  preprocessing.rs
