[package]
name = "smolvlm"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.97"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
hf-hub = "0.4.2"
tokenizers = "0.21.0"
